source/blender/depsgraph/intern/depsgraph_types.h
@@ -280,15 +280,4 @@ typedef enum eDepsOperation_Code {
 } eDepsOperation_Code;
 const char *operationCodeAsString(eDepsOperation_Code opcode);
 
-typedef enum eDepsNode_CollectionOwner {
-	/* Unknown owner of collection, collection is pulled directly, maybe
-	 * via driver.
-	 */
-	DEG_COLLECTION_OWNER_UNKNOWN,
-	/* Collection belongs to a scene. */
-	DEG_COLLECTION_OWNER_SCENE,
-	/* Collection is used by object, as a dupli-system. */
-	DEG_COLLECTION_OWNER_OBJECT,
-} eDepsNode_CollectionOwner;
-
 }  // namespace DEG
