source/blender/depsgraph/intern/nodes/deg_node_id.cc
@@ -104,6 +104,7 @@ void IDDepsNode::init(const ID *id, const char *UNUSED(subdata))
 	id_orig = (ID *)id;
 	eval_flags = 0;
 	linked_state = DEG_ID_LINKED_INDIRECTLY;
+	is_visible = true;
 
 	components = BLI_ghash_new(id_deps_node_hash_key,
 	                           id_deps_node_hash_key_cmp,
@@ -171,7 +172,8 @@ string IDDepsNode::identifier() const
 	BLI_snprintf(orig_ptr, sizeof(orig_ptr), "%p", id_orig);
 	BLI_snprintf(cow_ptr, sizeof(cow_ptr), "%p", id_cow);
 	return string(nodeTypeAsString(type)) + " : " + name +
-	        " (orig: " + orig_ptr + ", eval: " + cow_ptr + ")";
+	        " (orig: " + orig_ptr + ", eval: " + cow_ptr +
+	        ", is_visible " + (is_visible ? "true" : "false") + ")";
 }
 
 ComponentDepsNode *IDDepsNode::find_component(eDepsNode_Type type,
